# Landau-Siegel-Zero-Tester

./: CMakeLists.txt  README.md  lsum.c  main.c  mpiSample.c  precomputeKronecker.c  zetasum.c
input/: output.txt
misc/: find_fail.py  line-counter.py  line_counter.py  main0.c  main1.c  precomputeKronecker.c  rigorousBound.c  zetasum.c
src/: CMakeLists.txt  buffered_chi.c  buffered_chi.h  compute.c  compute.h  main.c  main_by_file.c  main_test_ind.c  presets.c  presets.h  primes.c  primes.h
test/: CMakeLists.txt  chi_test.c  computation_test.c  primes_test.c
